<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="station_details">Station details</string>
    <string name="search_station">Search station</string>
    <string name="description">Description</string>
    <string name="list_of_bixi_stations">LIST OF BIXI STATIONS</string>
    <string name="global_usage_prediction_of_bixi_stations">GLOBAL USAGE PREDICTION OF BIXI STATIONS</string>
    <string name="global_usage_statistics_of_bixi_stations">GLOBAL USAGE STATISTICS OF BIXI STATIONS</string>
    <string name="global_data_of_bixi_stations">GLOBAL DATA OF BIXI STATIONS</string>
    <string name="bixi_over_to_you">BIXI OVER TO YOU</string>
    <string name="station_coordinates">Station Coordinates</string>
    <string name="station_data">Station Data</string>
    <string name="station_statistics">Station Statistics</string>
    <string name="station_predictions">Station Predictions</string>
    <string name="all_about_bixi_stations">ALL ABOUT BIXI STATIONS</string>
    <string name="list_of_stations">LIST OF STATIONS</string>
    <string name="global_usage_statistics">GLOBAL USAGE STATISTICS</string>
    <string name="global_usage_predictions">GLOBAL USAGE PREDICTIONS</string>
    <string name="bixi_stations">BIXI STATIONS</string>
    <string name="coordinates">COORDINATES</string>
    <string name="data">DATA</string>
    <string name="statistics">STATISTICS</string>
    <string name="predictions">PREDICTIONS</string>
    <string name="station_code_label">Station Code :</string>
    <string name="station_coordinates_title">STATION COORDINATES</string>
    <string name="app_name">BixiApplication</string>
    <string name="enter_your_ip_address">ENTER THE SERVER IP ADDRESS</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="ip_address">IP address</string>
    <string name="welcome_to_bixi">Welcome to Bixi!</string>
    <string name="confirm_server_address">Confirm server address</string>
    <string name="port">port</string>
    <string name="survey">Survey</string>
    <string name="e_mail">E-mail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_interested_by_bixi">Are you interested by Bixi?</string>
    <string name="send">Send</string>
    <string name="skip">Skip</string>
    <string name="choose_period">Select Period</string>
    <string name="year">Year</string>
    <string name="period">Period</string>
    <string name="display">display</string>
    <string name="choose_year">Select Year</string>
    <string name="global_usage_statistic">GLOBAL USAGE STATISTICS</string>
    <string name="helmets">/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAkGBxISEhUSEhIVFRUVGRgXFRUVGBUXFxUXFxUWGBUVFRUYHSggGBolHRcYITEhJSkrLi4uFx8zODMtNygtLisBCgoKDg0OGhAQGy0lHSYtLSstLS0tLS0tLSstLS0tKy0tLS8tLS0tLTAtLS8tLS0tLS0tLS0tLi0tLS0tLS0tLf/AABEIAMcA/QMBIgACEQEDEQH/xAAcAAACAgMBAQAAAAAAAAAAAAABAgADBAUGBwj/xAA+EAABAgQDBQUHAwMDBAMAAAABAAIDERIhBDFBBSJRYYEGEzJxoRRCkbHB0fBSYuEHFfEzcsJTgpKiFiM0/8QAGwEBAAIDAQEAAAAAAAAAAAAAAAIDAQQFBgf/xAAwEQACAQMDAgQEBgMBAAAAAAAAAQIDBBESITEFEzJBUWEUgZGhBiIjQnGxUtHwFf/aAAwDAQACEQMRAD8A9qe8OEhmhDNOeqhh03zUArubSQC0GdWk59E0Q1WCHee70n6IltFxfRAGG8NEjmkYwgzOSYMrvkgIlW7+WQEib2WiYPAFOuSUmjK80e7nvdUAIbaTM+SkRpcZhQOrsbaqF9Fs9UAzngikZpYe7nqiYct7qgN/O0vr/hABzCTUMk8RwcJBKYkt3oiWUXF9EBIbqRI+aUMINWmaYNrubaId5Pd6IAxN7LRFjwBI5oEUZXmoIdW9+WQCw2FpmckYgquFA+u2ShdRYX1QDViVOspdUsMU56o9373WXqgDXY2kgBEYXGYyTveHCQzSmJTbNR7RDBcTYZzsJcSUAYZpz1S0GdWk59Fw23P6o4KDF7uT4gAu+FItB4XzWVsb+p+zcQQxscMJtKJu8s8lFST4ZNwkuUdjENVgjDeGiRzSNcAA5pDgciMjzBCYMrvkpEBWMIMzkjE3stFBEq3fyyhNGV5oBg8AU65KruHKzu573VD2k8EAGTnvTlzyRift6y/hExKrBRposbz4IA2lpVLrP7pYf7suf8qd372mf1Rc6uwtrdALEnPdnLlknfKVpT5ZoB9NigIdO9+XQBh/u6T/AJSmc7Tp9JIuFeVpcURElu9EBIkvdz5cOiMOUt6U+aVraLm+llHMruPJABs53nLnkmift6y9MlDEnuoN3M7z4cv8oBmyleU+eaSHOe9lzRMOe8iX12HmgBEnPdy5ceiYylaU/WaDXUWPnZDu5b3VASH+7pP+UHznuzlyyTONeVpcVBEp3fy6AMSUt2U+WaEP92fP+UGspuVHNruLaXQAvPWmfSX2TRP29Zfwp3nu65fRBooubz4IBmSlvSnzzXHf1Px74OAed6TnNa7PIm/yXXmHVcLz/wDqntHvO7wwy/1H89Gj6rXuqihSbZZS8aPFNox4UUSE2nX6KnC7HBk6UxrawkutgbPDn2YBK05BWNwpY5zDzIFvw5rlK7SWiB1IaZvMh+yHaKJhz/8AW9xb+lxJbIcjZe5bOxZjQocVokHtDpDIE5rwJ+GoA92xJ5+XHJe1dg8SfYoQdMyBA4y0mtuzqtzcfIpvacdKkuToHylaU+WaEP8Ad0n/ACgIdO9+XUcK8rS4rpHNAZztOn0krZM/b6JBElu9Evs54hAO9gaJjNCGK89EsNpaZnJGIKvCgBWZ06ZdE0QU3CNYlTrKXVLDFN3IBmMDhMpGvLjSclIjS4zGSd7wRIZoBYhoy1TBgIq1zQhbvi16pS0kz0z6IAw3VGR81IjqTIIxHVCTc0Ybg0SdmgI5gAqGaWHv56fVBrCDM5Ixd7w6Z6IAOeQaRkniNDRMKNeAJHNJDaWmbskA0NtVz5JQ8k06ZIxBUZtyTF4Ilrl1QAibmWqLGBwqOaWFu+LVB7CTMZICQ3lxkUYhpsE0RwcJDNCGabOQBoEqtZT6pYZrz0QpM6tJz6Johq8KApxmKEJrnEya0TK8e2ntDv8AEOiuzNgOA0C6rt1tqqWFhnIzeRqdGrknYcNvwC871O6U59tcL+y+KwibLZeYF5n5rJ7RbKqa14NLwRIjXiFl7Bw2S2O0GTc0dVwpV3GsnHyNimvM0mL2Q3ENgloApIDjORDPeaOoC9E7INHduh/pNvIrjsG6h5b+qTh1sfUeq6PYkemJI2rEuui6VldSjcwUntx9TM4twlH0Ooa8uNJyRiGjLVM94IkM0IW74teq9ac8IYCKtc1X35RLSTPTPore+bx9CgKxEqtkoTRbOaZ4Et2U+SEO/i6TQE7v3usvVAOrtlK6EzOV6Z9JJolvDnyQAL6LZomHTvfl0YYBG9nzSMJnecueSAYCvlJDvJbvSakS3h6yTACV5T9ZoAFtF89Pz4KBld8tEIcyd7LnxQiEg7uXJAHvJ7vSah3Oc/p/lM4CVpT9UIV/F0n6oCd3Pe6yQD67ZaoOJnacvRPEAA3c+SAUuotnr+fBHu5b3WSkORG9nz4JQTO85ekkAQa+UlO8p3fy6MS3h6yRYBK8p880ACyi+agbXfKVlr8XtZkPxumf0rnsft2LEmGChvLNaF11Khb7N5fojYpW06m+Njo8ftiFBBD3DhIXPwXIbX7YxCCzDtoBtW656DRYZgzublD+36n4Lg1ut1J7R2X3LpW6h7s02HhkTc4zcdT80mLfkOPyWbjGysM1fsrY3eOqdkuf3F45EY05SZnbCgyZNWYj/UPID5lbRuHDRILX4qCREHMfJaGrMm2bcYYSRqdobvduGji0+RuPktxBiVNHFa3bGGroYP1VHyAI+vottgsHS0K6rVThFrklp/UOn2Rig9lRO82zh6TWeBXykuWw0YwnBw6jiOC6VsUOaHMyInb6r2PSr9XVLD8S5/2c+5o9uWVwx+8lu9Jo+zc0QBK8p+s1VU/muqaw7YdNz6KOFdxpxQY8uMiuX/qft2LgMC+LAMnktYHZltRlMc1hvBlLLwb3GbZgQpw3xAHAeEXOXAXWA3tJCbk1x9F89bEi4qNGrhONb7uiONRJmJ1T5L1vZ2DIa2olxlcm0zxsuD1LqNW3liLiv7OhQtqcvFk6eJ2ja4z7t3xCsPaVpEjDI6rTNg8gm9nXGfXbpcSX0Nn4Sh6G/wALtyDrMT5LLh4hjzU17TrKd1yRhyzKAHArYpfiKsvHFP7FcrCm/C2ds51dh53Ua+ix87LkIWLiN8LiskbZie9IrpUvxBbS8Sa+5rysKi4aZ0ohyNWijt/LTjz/AMLRjtCZSLPgrIe3mj3CPVbker2cv3lTtKy8jciIBu6oNZRc+VlqTtyHmWmaSL2gBHgJUn1W0SzrRhWtb/E3Lm13HldR0USllpM5LmYm3IuTZNHxK12IdEieN7j1WlW6/bw8Cb+xfDp834ng6PEbchQpgGt3Bv3Wixu2Y0UmW4Dwz+KxYGGlosuHh1wbvrdersnhexu07WlS3e7MJsDU3KvbB4LNbAAzUiRA0TJkFx+5KT2LXPOyKGYcDNYGPxgG6251PBTFYtzzJthx1KsweyZ3d8FdGKjvLkj20t5GJgMDW6ZuuihQQBIWCbD4YNFgrgFN5k8srnNeRU5q120jJtX6SthHmLhavbjaoLm/qLG9C9s/SaiorWkIGLs9piHvCPFkODdPv1W9DbLEw8ICQGizpKpy1SfoZlsURQszs9jKS6Gcsx9QsSIqID6IrTzXR6dcOhcRkuM4f8MxOGum4nWmHM1aZpvaBzSGIQadMlZ7OOa+gHEBEcCJDNaHtlsVmLwUbDxTTUJtdwc27T8Vve7pvmtV2jm6FMDI3VdaTjBtFlJZmkeb9nNkMw82jOwvy+63m0Nt4fDACNEDSRMNzcRxkNEIjJ5ZryTtqHP2k8OJkWsA5AM0OgmCeq8jGw+KuG6reMZOrL9NbHeRP6hQXOow7HRXnRonLmSZAfFb7AGLFbVFm2fugzl5yElxXYzsu+G7vA7dfe2eS9IgwZLQ6grei+3RXz8yylNtZYkPBtVjcK3grwxPJcmUpEnN+pR7M1A4fmfmr2ZXzTSUNbI62Yhwx5H4hAQjwPRZklCFnuMzrZhlo5/BSlv6lmSUo5JrGsxGsbx+ScMZxVxhDgEO4bwCzqTGsr71g1CV2LbpM+QV/dDgE4YEzExqiYLosR3hbLmUv9vc67nTWxCcBWKoO5jg12C2aGZmp05kn5AaBZ8JpCsATKxTy8sqlNsACJQJSOcp9xIikVxitRtJ83wmDV1Tv9rR9yPgtnEdK61OH33uinXdb/tE79TMqMZbuRsQibSC2ayFVhxZXuEwq4Lllc3uY5KxcQbjzWW4cVhxTfqr4P8AMv5RbA7KG8UgayVfdO/CjBhbodPQH4BN7Ty9V9KjwjgvkDCSZOy5oYhglICYOYzTueHWHqow0WOvBSMHMbX2OWb7LtOY1auD7X9lhiwIkN1Edgkx2jh+h/DkdF7CYczVaWfRcvtzBUvL2jcPouXc0HSfdpnQt63c/JM8e2BtrE4aK6FEcQWEB0GJKeXia8StqM5r1vZuNbEaDkToVzHaPs7DxYaSaYjZUvGoBnQ7i35T81usIGhoaRKVhy8l53qkITxUit/M3IwwsM34IQJCwmxuasEZcSRHQy0STKsPCF1ThDBYiq2gpxPVQcTAZIyQmiCsaTBCFC1RQlShhS3BHBEBKjNSnhvKAQEwQLkJrCwYGLktSriOSwnTCzkko7ZLCUjihEiAZrS43abnv7mD4vedpDHPi7g34qdOEqj2JRhkyMXErJYMveP/ABVsGHkAq4EEMaGj4nMnUk6lZ2GharMmuFwXNqKMiG1RysaFW9Z4Rq5yyiKVhwxMjmVlRjZDZkGqK0c5/BbFnTdWtGPuX50wbOnaSJDSwV1DeSUPAFOuSr9nPJfSkcEdzA249VGCu504JYYIM3Zc0Yt/D6ICd4Z06ZfRCNDAGU52INwnmJS1l1mlhiXi9UBz209imXeQxbVvDyWkLeK7uICTu5cliY/ZkKLcWdy1XMuenqe8Pob9G8xtM5FriFYI/r+WWfidhxG5SPzXiH9Re+fjw1weGsswtmC3KcjoZ3nn6Ljf+Qpz0y/KbcriOnMdz2RkbmrWRV532WwmPoLhinObalsUCICfeFR3pDLPitlje0EXDGUdkLKe5Fax0uPdvOXVcmr099x06clJr0LIyTjlnbjEKxsYFcrhdt94wODHtn+puh1mCQthCxY4j4rSqW84PDJaEze1BQFaX22WqP8AcpaqvtTI9o3U1CtONrBMNqhR7U/Qx2mbUKLWf3QIHaoWO3P0HakbSak1pYu2mjUBYT9u1eAOd5ZfHJTjbVH5Ge0/M6GPEEs1gYvazIYuZcOJ8hqtK98d+ZDAdBd3xyCycJskC5z1JM3HrorlQhHeb+hJRS9yiJHjYgybNjePvEf8fn5La4HBthNpaPM8TxKugww0SaFkwoPFRqVsrTFYXoZbS5JBhalZsNqVjVaq4rzZrzlkBKpeU7yqYhR7mIoojOWx2DCpnElnYfVa1jC9waNSuqwkMMbSbcPqvTdAtMzdV8L+yu8qaYaF5lgYCKtc1X7QeSJBnMZfRW1t5L1pyxO8qtkpOi2c+iMRoAmM0IQq8X2QA7v3p85eqNVdspX4pajOWk5dE0QU+H7oCV0WzQ7unenOWnmmhtBE3ZpGOJMjkgGlXyl1Xn/aDZsP2k96wEE6hd/F3fD11Wp7RbM72GHtG+3TUhc/qVvKtRajyt0bFtNRnvwzQwcOGyDQANJWA6LwHtxi4kfHxnRGyk6hreDGGlt+efVe/YCNMSOYzXO7Y2BAMfvHww8OvI5c5yz8ivKdKu1a1p9xZeMe50a1PWsGN/TzCPGDhCISTvUTzEOo0T6D1C6t2zWkXE1MBhwJUiQ0GkuS1n9Q8f3OAiumQ5wDWynmSDci8pAzktKc5XV1iO2p/TJNS0RGj4BkyA4TGYDrjzE7LFfspxyLvj91592BEb2mG5pk10+8AyIu6RGv8r2WFBElff05WU1DVklCrqjlnKu2HE0eR1b9lX/Y43/UPp9l2gw7eCPdDgtP4+p/yJd1HFjYsbWK7/1+ytbsI+895/7pfJdYYQ4I9w1PjpsdxHNwtjNHuN8zc+qzoeDA1+C23swRbAHBVyuJy5MdyJgMhAZBXw4JKzGsHBMAqstkXV9CmHBkrmsTgIOcpJJFTk2NNI5yo728gnmjZnSRxWNEcniPV+ycH3rpnwA35ngFt2drOvUUIknJQjqZm7FwdI71w8hy4rayr5S6pIZM5HL8kmi7vh66r6FbUI0Kapx8jkVKjqScmHvJbvSaHs3P0TBolM5/VVd678CvKxmMLTMoxBXlpxUbEqsfRRxosNeKAasSp1y6pWCi59Ee7tVrny4oNNdj52QAewuuE7nhwpGaVz6bD1RdDDd4Z/dASHuZ68EpYSatM0zRXnpwQMSRp0yQGk2tsiomLAEnZubo7mOa5zFuqEjZw0Oc137m0XHldYuJ2ZCjib234ix+K4t/0eFeXchtL7M3KN04rEt0cZsjGS3D0+yydvbMbiYLoTtZEeYMwq9r9mIrCX4Y18YbrOt+l2pWFszbzSe6ibsQWLXbrh5g/NeZu+nXFrNVEvobsKkKnBR2X2PCgkgCT+f0XVQ2LS4tt629futngMWHiRz+a51xKdV9xvJOSwtjNDUrgrAVCq9KaKMmO4ISVjmJCFBxLEwtKYKtEZLKA5KBKWaBKzgYIHJHPKNKhWEmSSK6Lz+Cj3quJFWfgtkOeK4m63MN1d58At+zsatzLEF8xOcYLMmYuDwhingwG7uPILo4eGAADBJosE0BoIDQAAMgLJnPpsPVe6sbGnaw0x582cutXdR+wznhwpGaEPcz14KOhhu8M/uo0V56cFvFApYSatM1Z7QOaQxJGnTJN7OOaAjyJbsp8kIdvF6oCHTfNQiu+UkAJGc70z6STRL+HPkp3nu9J+iAbRfOdkA0MgDez5pGAzvOXPJEsrvkiYlW7l/CAES/h6yTAiV5T9ZoDc5zQ7ue91kgJDmDvZc+KEQEndy5Ji6u2Wv58VA+i2eqALiJWlP1Wq2rsDDYoSxMME+6/J7f9rxcLZ93Le6yRO/yl9f8LDSawzKbXBw0fsfioP8A+WOIsPSHHzlwEQfULUYp+Lw2/FwrwweJ0MiIG8928ui9Q7yW70mhRRfPRc6t0m2qPOnH8GxC7qR9zidkbehxmgteHDiPrwW3bFBU2n2LwmJcYgYYMT/qQTQ6fEys7qFqf/jWNgmUHEsjDRsZtDv/ADZY/Beeuvw7Vi9VF59jZjcU5c7G3rQJWqL8ZD/1cI/zhua8fOaZu1B7zIjP9zHD6LkT6fdU/FBlqcXw0bJAlYzcW05H5phEnkCfIFU/D1eNL+hPYtJSOcmbCiOyhvPMiQ+JWXhdkud4iG+V1uUel3VXiD+exF1aceWa8xVbAw74nhHU5LbQtmQ2G4Lzzy+CzhDovw0Xctfw8lvWfyRr1LxfsRh4DZzId33doT9AsuRnO9M+kkSK75SR7z3ek/RekpUoUo6YLCNGU3J5ZIl/DnyRhkAb2fNKG0XznZQsrvkrCIGAzvOXPJGJfw9ZImJVu5fwoNznNAEESvKfrNVUv5p+7nvdZI+08kAsNxcZHJGIafD90z3hwkM0IZoz1QBoEqtZT6pYZqs5Cgzq0z6JohqsEAsRxaZNyTvYAJjNRjw0SKRrC01HJANC3vFp0SlxBlpl0Rib+WiYPAFOuSAEQUibc0YbQ4TdmlhtpufJCI2q4QEa8kyOSMXd8Np56pnPBFIzSw9zPX6IBmsBEzmkhuLjJ2SjmEmoZJojqhIIARDSZNyTFgAnrn1QhupsfNKGEGrTNAGFveLTog9xBkMk0Tfy0RY8NFJzQAiwwBMC/wAVIQqF/t8ksNhaZlGIKrhACozp0nLomiCnw/dGsSp1lLqlhijPVANDYHCZzSQ3lxkclHsLjMZJ3vDhIZoBYhp8P3TUCVWsp9UIZoz1S0GdWmfRAGGarOQiOLTJuSaIarBFjw0SKAj2ACYzQhb3i06JWsLTUckYm/logAXEGWmXRW9y3h6lKHgCnXJV+zlAOYdNwo0V3NpcFFEAO893TL6IubRceV1FEBAyq5QESrdP5JRRAR25lefFHu572uaiiADXV2PnZRz6LDzuoogCYct5Bu/naXDn/hFRAAxJbqLmUXHldRRARra7nysgIk93TJRRAFwoyvPioIdW9+WUUQAa+qxUc6iw87qKIA9372uf1Qaa7G0uCiiAhiU2CJh03CiiAjRXc2lwQ7z3dMvooogC5tFx5XUDKrlRRAARKt0/klHbmV58UVEBO7nva5pfaDwCiiA//9k=</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="rank">Rank</string>
    <string name="monthly_departures_and_arrivals">Monthly departures and arrivals at this station for year: </string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="_6">6</string>
    <string name="jun">June</string>
    <string name="station_name">Station Name</string>
    <string name="station_code">Station Code</string>
    <string name="PerDate_Prediction_Title"><![CDATA[Prediction Values of per date Departures for:]]></string>
    <string name="day_of_week">Day of Week</string>
</resources>