<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="inf3995.bixiapplication.StationView.Predictions.StationPredictions.DailyStationPredictionActivity">

    <include
        android:id="@+id/lllProgressBarD"
        android:visibility="visible"
        layout="@layout/progress_bar"/>

    <LinearLayout
        android:id="@+id/coord_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/recyclerview_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Station_code_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textColor="@color/colortextdata"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Station_codeD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/station_code"
                android:textColor="@color/colortextlabel"
                android:textSize="25sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Station_name_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colortextdata"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/Station_nameD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/station_name"
                android:textColor="@color/colortextlabel"
                android:textSize="25sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/predictTitleD"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colortextdata"
            android:text="@string/PerDate_Prediction_Title"
            android:textSize="25sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/predictionYearD"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_margin="5sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="Prediction Year"
            android:textSize="25sp"
            android:textColor="@color/colortextdata"
            android:layout_gravity="center_vertical"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:src="@drawable/oranges" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:background="#DD2C00"
            android:padding="5dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text80"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="0.5"
                android:text="@string/rank"
                android:textColor="#ffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text81"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="0.5"
                android:text="@string/day_of_week"
                android:textColor="#ffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text82"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="0.5"
                android:text="@string/departure"
                android:textColor="#ffff"
                android:textStyle="bold" />


        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="0dp">

            <TableLayout
                android:id="@+id/main_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:paddingLeft="5dp"
                app:tabMode="scrollable"
                android:paddingRight="5dp">

            </TableLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>