<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="inf3995.bixiapplication.MainScreen.MainScreenActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/logo_bixi_1"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"/>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00F3EEF2"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="#F68787"
        android:gravity="center"
        android:text="@string/all_about_bixi_stations"
        android:textColor="#000"
        android:textSize="50sp"
        android:textStyle="bold" />
<Button
    android:id="@+id/button1"
    android:layout_width="600dp"
    android:layout_height="120dp"
    android:text="@string/list_of_stations"
    android:layout_gravity="center_horizontal"
    android:textSize="38sp"
    android:textStyle="bold"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="80dp"
    android:layout_marginBottom="50dp"
    android:background="@drawable/global_activity_button"
    app:layout_constraintBottom_toTopOf="@+id/button2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar2" />


<Button
    android:id="@+id/button2"
    android:layout_width="600dp"
    android:layout_height="120dp"
    android:text="@string/global_usage_statistics"
    android:textSize="35sp"
    android:layout_gravity="center_horizontal"
    android:textStyle="bold"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="50dp"
    android:background="@drawable/global_activity_button"
    app:layout_constraintBottom_toTopOf="@+id/button4"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="600dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/global_activity_button"
        android:text="@string/global_usage_predictions"
        android:textSize="38sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />
</LinearLayout>

</LinearLayout>